--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
   width: 100%;
   padding: 1.2rem;
   font-weight: 700;
+  font-size: 0.9rem;
   margin-top: 0.4rem;
   background-color: var(--card);
   border: 1px solid rgba(128, 128, 128, 0.406);
