--- a/style.css
+++ b/style.css
@@ -217,6 +217,30 @@ body {
   border: 1px solid red !important;
 }
 
+footer {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  justify-content: center;
+  width: 100%;
+  font-size: max(1rem, 1.1vw);
+  letter-spacing: 0.05rem;
+  animation-name: fadeInBottomLeft;
+  animation-duration: 1.2s;
+  color: var(--font);
+}
+
+footer a {
+  text-decoration: underline;
+  color: var(--font);
+}
+
+footer a:hover {
+  text-decoration: underline;
+  text-decoration-color: var(--theme);
+}
+
 @media screen and (max-width: 1024px) {
   .title-converter,
   .contain-converter {
